force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/RS_Einstein_Sentiment_Settings__mdt.object-meta.xml
<CustomObject>
    <label>RS Einstein Sentiment Settings</label>
    <pluralLabel>RS Einstein Sentiment Settings</pluralLabel>
</CustomObject>