force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>