force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/fields/Einstein_API__c.field-meta.xml
<CustomField>
    <fullName>Einstein_API__c</fullName>
    <label>Einstein API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>