force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>