force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/fields/JWT_Certificate__c.field-meta.xml
<CustomField>
    <fullName>JWT_Certificate__c</fullName>
    <label>JWT Certificate Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>