force-app/main/default/objects/RS_Einstein_Sentiment_Settings__mdt/fields/JWT_Email__c.field-meta.xml
<CustomField>
    <fullName>JWT_Email__c</fullName>
    <label>JWT Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>